Fix checkbox dot center alignment in light theme

--- a/styles.css
+++ b/styles.css
@@ -562,6 +562,8 @@ blockquote cite {
 [data-theme="light"] .commitment input[type="checkbox"]:checked {
     background: #fff;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Ccircle cx='6' cy='6' r='3' fill='%23000'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .commitment span {
